[project]
name = "ppg-assessment-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dotmap>=1.3.30",
    "git-filter-repo>=2.47.0",
    "heartpy>=1.2.7",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "pyppg>=1.0.14",
    "scipy>=1.16.3",
    "setuptools>=80.9.0",
]

[tool.uv]
package = true
